--- a/gradle/release/tencent_publish.gradle
+++ b/gradle/release/tencent_publish.gradle
@@ -44,8 +44,8 @@ static def addPomDependency(groovy.util.Node dependenciesNode, Dependency depend
  * `$ ./gradlew clean library:assembleRelease androidJavaDocJar androidSourcesJar generatePomFileForNexusPublication publishNexusPublicationToSonatypeRepository closeSonatypeStagingRepository`
  *
  * 环境变量
- *  - `MAVEN_USERNAME` : Sonatype token 用户名
- *  - `MAVEN_PASSWORD` : Sonatype  token 密码
+ *  - `MAVEN_TOKEN_USERNAME` : Sonatype token 用户名
+ *  - `MAVEN_TOKEN_PASSWORD` : Sonatype  token 密码
  *  - `SIGNING_KEY_ID` : 秘钥后8位
  *  - `SIGNING_KEY` : GPG密钥
  *  - `SIGNING_KEY_PASSWORD` : GPG密钥的密码
@@ -53,16 +53,16 @@ static def addPomDependency(groovy.util.Node dependenciesNode, Dependency depend
 publishing {
   publications {
     nexus(MavenPublication) {
-      groupId 'io.github.TheMelody'
-      artifactId 'tencent_compose'
-      version '1.0.0'
+      groupId rootProject.ext.libraryInfo.groupId
+      artifactId rootProject.ext.libraryInfo.tx_artifactId
+      version rootProject.ext.libraryInfo.lib_versionName
 
       artifact bundleReleaseAar
       artifact androidJavaDocJar
       artifact androidSourcesJar
 
       pom {
-        name = "io.github.TheMelody:tencent_compose"
+        name = rootProject.ext.libraryInfo.groupId + ":" + rootProject.ext.libraryInfo.tx_artifactId
         description = "🔥🔥🔥Compose一键集成5大地图平台地图 - 腾讯地图"
         url = "https://github.com/TheMelody/OmniMap-Compose"
         licenses {
