新增百度地图，其他库删除ids.xml不使用的ID，移除高德地图隐藏Logo不合规的问题

--- a/gd-map-compose/build.gradle
+++ b/gd-map-compose/build.gradle
@@ -8,11 +8,11 @@ afterEvaluate {
 }
 
 android {
-    compileSdk 33
+    compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.libraryInfo.minSdk
+        targetSdk rootProject.ext.libraryInfo.targetSdk
 
         consumerProguardFiles "consumer-rules.pro"
     }
