--- a/gradle_map.properties
+++ b/gradle_map.properties
@@ -1,5 +1,13 @@
 GROUP_ID = io.github.TheMelody
 GD_ARTIFACT_ID = gd_compose
 TX_ARTIFACT_ID = tencent_compose
+BAIDU_ARTIFACT_ID = baidu_compose
 
+# build.gradle sdk common version
+COMPILE_SDK_VERSION = 33
+TARGET_SDK_VERSION = 33
+MIN_SDK_VERSION = 21
+HUAWEI_MIN_SDK_VERSION = 24
+
+# publish maven central library version_name
 LIB_VERSION_NAME = 1.0.1
