--- a/sample-common/build.gradle
+++ b/sample-common/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.melody.sample.common'
-    compileSdk 33
+    compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.libraryInfo.minSdk
+        targetSdk rootProject.ext.libraryInfo.targetSdk
 
         consumerProguardFiles "consumer-rules.pro"
     }
