--- a/sample-gaode/build.gradle
+++ b/sample-gaode/build.gradle
@@ -10,12 +10,12 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 def jksDir = keystorePropertiesFile.absolutePath.substring(0,keystorePropertiesFile.absolutePath.length() - "keystore.properties".length())
 
 android {
-    compileSdk 33
+    compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
         applicationId "com.melody.map.myapplication"
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.libraryInfo.minSdk
+        targetSdk rootProject.ext.libraryInfo.targetSdk
         versionCode 100
         versionName "1.0.0"
 
