--- a/sample-tencent/build.gradle
+++ b/sample-tencent/build.gradle
@@ -11,11 +11,11 @@ def jksDir = keystorePropertiesFile.absolutePath.substring(0,keystorePropertiesF
 
 android {
     namespace 'com.melody.tencentmap.myapplication'
-    compileSdk 33
+    compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.libraryInfo.minSdk
+        targetSdk rootProject.ext.libraryInfo.targetSdk
         versionCode 100
         versionName "1.0.0"
 
