--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ dependencyResolutionManagement {
 rootProject.name = "OmniMap"
 include ':gd-map-compose'
 include ':tencent-map-compose'
+include ':baidu-map-compose'
 include ':sample-gaode'
 include ':sample-baidu'
 include ':sample-tencent'
