--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,19 +48,16 @@ jobs:
         with:
           allowUpdates: true
           # 安装包
-          artifacts: "sample-gaode/build/outputs/apk/release/*.apk,sample-tencent/build/outputs/apk/release/*.apk"
+          artifacts: "sample-gaode/build/outputs/apk/release/*.apk,sample-tencent/build/outputs/apk/release/*.apk,sample-baidu/build/outputs/apk/release/*.apk"
           artifactErrorsFailBuild: true
-          ### 此版本中更改的内容
-          # ${{ steps.changelog.outputs.changelog }}
           body:  |
-            MapCompose集成高德地图能力，请添加如下依赖：
-            ```groovy
-              implementation 'io.github.TheMelody:gd_compose:1.0.1'
-            ```
-            MapCompose集成腾讯地图能力，请添加如下依赖：
-            ```groovy
-              implementation 'io.github.TheMelody:tencent_compose:1.0.1'
-            ```
+            ### 功能更新
+            - 新增百度地图能力
+            - 删除ids.xml不使用的ID
+            - 移除高德地图隐藏Logo不合规的问题
+            - TODO:更多能力写在这里.....
+            ### 问题修复
+            - TODO:更多能力写在这里.....
           token: ${{ secrets.github_token }}
           commit: master
           # tag名称和分支名称保持一致，dev_**分支不触发工作流，vx.x.x分支触发工作流
@@ -68,9 +65,5 @@ jobs:
 
       - name: "Publish Map-Compose"
         run: ./gradlew clean assembleRelease androidJavaDocJar androidSourcesJar generatePomFileForNexusPublication publishNexusPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository
-#      - name: "Publish TX Map-Compose"
-#        run: ./gradlew clean tencent-map-compose:assembleRelease androidJavaDocJar androidSourcesJar generatePomFileForNexusPublication publishNexusPublicationToSonatypeRepository
-#      - name: "Publish GD Map-Compose"
-#        run: ./gradlew clean gd-map-compose:assembleRelease androidJavaDocJar androidSourcesJar generatePomFileForNexusPublication publishNexusPublicationToSonatypeRepository closeAndReleaseSonatypeStagingRepository
 #        # 下面的方式：不自动关闭暂存库，手动去执行关闭的话，可以在网页中选择是否删除或者释放：https://s01.oss.sonatype.org/#stagingRepositories
 #        #run: ./gradlew clean gd-map-compose:assembleRelease androidJavaDocJar androidSourcesJar generatePomFileForNexusPublication publishNexusPublicationToSonatypeRepository
