--- a/sample-baidu/build.gradle
+++ b/sample-baidu/build.gradle
@@ -11,11 +11,11 @@ def jksDir = keystorePropertiesFile.absolutePath.substring(0,keystorePropertiesF
 
 android {
     namespace 'com.melody.bdmap.myapplication'
-    compileSdk 33
+    compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.libraryInfo.minSdk
+        targetSdk rootProject.ext.libraryInfo.targetSdk
         versionCode 100
         versionName "1.0.0"
 
@@ -74,5 +74,6 @@ android {
 dependencies {
     implementation project(path: ':sample-common')
     implementation project(path: ':sample-ui-components')
+    implementation project(path: ':baidu-map-compose')
 
 }
