处理sample-gaode的清单文件误粘贴到别的配置； 更新MapUiSettings、MapProperties、CameraPositionState文档注释；

--- a/sample-gaode/src/main/AndroidManifest.xml
+++ b/sample-gaode/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
             android:exported="false"
             tools:node="merge">
             <meta-data
-                android:name="com.melody.bdmap.myapplication.initializer.AppDataInitStartup"
+                android:name="com.melody.map.myapplication.initializer.AppDataInitStartup"
                 android:value="androidx.startup" />
         </provider>
 
