--- a/sample-baidu/src/main/AndroidManifest.xml
+++ b/sample-baidu/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+
     <!-- 访问网络，进行地图相关业务数据请求，包括地图数据，路线规划，POI检索等 -->
     <!-- 获取网络状态，根据网络状态切换进行数据请求网络转换 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -28,6 +33,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <meta-data
@@ -66,11 +72,23 @@
 
         <activity android:name=".LocationTrackingActivity" android:exported="false"/>
 
+        <activity android:name=".TrackMoveActivity" android:exported="false"/>
+
         <activity android:name=".SmoothMoveActivity" android:exported="false"/>
 
         <activity android:name=".BM3DModelActivity" android:exported="false"/>
 
         <activity android:name=".BM3DPrismActivity" android:exported="false"/>
+
+        <activity android:name=".MovementTrackActivity" android:exported="false"/>
+
+        <activity android:name=".MovementTrackActivity2" android:exported="false"/>
+
+        <activity android:name=".MultiPointOverlayActivity" android:exported="false"/>
+
+        <activity android:name=".MarkerAnimationActivity" android:exported="false"/>
+
+        <activity android:name=".MarkerClusterActivity" android:exported="false"/>
 
     </application>
 
