--- a/gd-map-compose/build.gradle
+++ b/gd-map-compose/build.gradle
@@ -26,7 +26,7 @@ android {
         }
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.4.4"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
