--- a/sample-google/build.gradle
+++ b/sample-google/build.gradle
@@ -56,7 +56,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.4.4"
     }
     packagingOptions {
         resources {
