--- a/sample-tencent/build.gradle
+++ b/sample-tencent/build.gradle
@@ -57,7 +57,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.4.4"
     }
     packagingOptions {
         resources {
