--- a/sample-ui-components/build.gradle
+++ b/sample-ui-components/build.gradle
@@ -31,7 +31,7 @@ android {
         jvmTarget = '1.8'
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.4.4"
     }
     packagingOptions {
         resources {
