--- a/sample-baidu/src/main/AndroidManifest.xml
+++ b/sample-baidu/src/main/AndroidManifest.xml
@@ -78,6 +78,8 @@
 
         <activity android:name=".BM3DModelActivity" android:exported="false"/>
 
+        <activity android:name=".BM3DBuildActivity" android:exported="false"/>
+
         <activity android:name=".BM3DPrismActivity" android:exported="false"/>
 
         <activity android:name=".MovementTrackActivity" android:exported="false"/>
