1、百度地图更新拖拽选点示例 2、百度地图倾斜手势开关打开，需要手动设置倾斜角度，否则3D效果无法出来，不像腾讯和高德，他们是支持手势的，百度需要自己设置。

--- a/sample-baidu/src/main/AndroidManifest.xml
+++ b/sample-baidu/src/main/AndroidManifest.xml
@@ -82,6 +82,8 @@
 
         <activity android:name=".BM3DPrismActivity" android:exported="false"/>
 
+        <activity android:name=".DragDropSelectPointActivity" android:exported="false"/>
+
         <activity android:name=".MovementTrackActivity" android:exported="false"/>
 
         <activity android:name=".MovementTrackActivity2" android:exported="false"/>
