--- a/sample-baidu/src/main/AndroidManifest.xml
+++ b/sample-baidu/src/main/AndroidManifest.xml
@@ -94,6 +94,8 @@
 
         <activity android:name=".MarkerClusterActivity" android:exported="false"/>
 
+        <activity android:name=".RoutePlanActivity" android:exported="false"/>
+
     </application>
 
 </manifest>
