--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,8 +18,9 @@ jobs:
       SIGNING_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
       SIGNING_KEY_PASSWORD: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
     steps:
-      - uses: actions/checkout@v3
-      - name: set up JDK 11
+      - name: "Checkout@V3"
+        uses: actions/checkout@v3
+      - name: "Setup JDK 11"
         uses: actions/setup-java@v3
         with:
           java-version: '11'
