--- a/sample-gaode/build.gradle
+++ b/sample-gaode/build.gradle
@@ -56,7 +56,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.4.4"
+        kotlinCompilerExtensionVersion compose_version
     }
     packagingOptions {
         resources {
