--- a/tencent-map-compose/build.gradle
+++ b/tencent-map-compose/build.gradle
@@ -27,7 +27,7 @@ android {
         }
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.4.4"
+        kotlinCompilerExtensionVersion compose_version
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
