升级地图依赖库版本、compose升级至1.3.3稳定版本

--- a/sample-baidu/build.gradle
+++ b/sample-baidu/build.gradle
@@ -56,7 +56,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     packagingOptions {
         resources {
