--- a/baidu-map-compose/build.gradle
+++ b/baidu-map-compose/build.gradle
@@ -27,7 +27,7 @@ android {
         }
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
