--- a/gd-map-compose/build.gradle
+++ b/gd-map-compose/build.gradle
@@ -26,7 +26,7 @@ android {
         }
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -46,7 +46,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
     // 高德地图3d
-    api 'com.amap.api:3dmap:9.5.0'
+    api 'com.amap.api:3dmap:9.6.2'
     // 高德地图：搜索相关API，路径规划需要用到这里面的类
-    api "com.amap.api:search:9.4.5"
+    api "com.amap.api:search:9.5.0"
 }
