--- a/sample-ui-components/build.gradle
+++ b/sample-ui-components/build.gradle
@@ -31,7 +31,7 @@ android {
         jvmTarget = '1.8'
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion "1.3.2"
     }
     packagingOptions {
         resources {
@@ -42,8 +42,8 @@ android {
 
 dependencies {
     api 'androidx.core:core-ktx:1.8.0'
-    api "androidx.compose.foundation:foundation:$compose_version"
-    api "androidx.compose.material:material:$compose_version"
+    api "androidx.compose.foundation:foundation:1.3.1"
+    api "androidx.compose.material:material:1.3.1"
     api "androidx.compose.ui:ui-tooling-preview:$compose_version"
     api "androidx.compose.ui:ui:$compose_version"
     api "com.google.accompanist:accompanist-flowlayout:0.26.2-beta"
