--- a/baidu-map-compose/build.gradle
+++ b/baidu-map-compose/build.gradle
@@ -26,15 +26,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion "1.3.2"
+    composeOptions  {
+        kotlinCompilerExtensionVersion "1.3.2" 
+        kotlinCompilerVersion "1.7.10"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 
     lint {
@@ -44,7 +45,7 @@ android {
 
 dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     // 地图组件
     api 'com.baidu.lbsyun:BaiduMapSDK_Map:7.5.8'
 }
