--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.3.3'
+        compose_version = '1.5.0-beta03'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
