--- a/sample-common/build.gradle
+++ b/sample-common/build.gradle
@@ -24,14 +24,15 @@ android {
         compose true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     composeOptions {
         kotlinCompilerExtensionVersion "1.3.2"
+        kotlinCompilerVersion "1.7.10"
     }
     packagingOptions {
         resources {
@@ -43,9 +44,9 @@ android {
 dependencies {
     api "androidx.compose.runtime:runtime:$compose_version"
     api 'androidx.core:core-ktx:1.8.0'
-    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    api 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-    api 'androidx.activity:activity-compose:1.5.1'
-    api "com.google.accompanist:accompanist-permissions:0.26.2-beta"
-    api "androidx.startup:startup-runtime:1.2.0-alpha01"
+    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    api 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
+    api 'androidx.activity:activity-compose:1.6.1'
+    api "com.google.accompanist:accompanist-permissions:0.31.5-beta"
+    api "androidx.startup:startup-runtime:1.2.0-alpha02"
 }
