--- a/sample-ui-components/build.gradle
+++ b/sample-ui-components/build.gradle
@@ -24,14 +24,15 @@ android {
         compose true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
     composeOptions {
         kotlinCompilerExtensionVersion "1.3.2"
+        kotlinCompilerVersion "1.7.10"
     }
     packagingOptions {
         resources {
