处理高德地图内存泄露问题; 百度地图同高德地图在MapApplier中移除对MapView的引用; 升级Compose版本和JDK版本;

--- a/sample-baidu/build.gradle
+++ b/sample-baidu/build.gradle
@@ -84,5 +84,6 @@ dependencies {
     implementation 'com.baidu.lbsyun:BaiduMapSDK_Search:7.5.8'
     // 工具组件
     implementation 'com.baidu.lbsyun:BaiduMapSDK_Util:7.5.8'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 
 }
