--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,20 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/detekt.xml
+/.idea/compiler.xml
+/.idea/kotlinc.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/inspectionProfiles/
+/sample-baidu/release/
+/sample-gaode/release/
+/sample-huawei/release/
+/sample-tencent/release/
+/sample-google/release/
+/sample-baidu/debug/
+/sample-gaode/debug/
+/sample-huawei/debug/
+/sample-tencent/debug/
+/sample-google/debug/
+
