--- a/sample-huawei/build.gradle
+++ b/sample-huawei/build.gradle
@@ -66,8 +66,8 @@ android {
         }
     }
 
-    android.applicationVariants.all { variant ->
-        variant.outputs.all {
+    android.applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
             outputFileName = "huawei_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
         }
     }
@@ -76,9 +76,11 @@ android {
 dependencies {
     implementation project(path: ':sample-common')
     implementation project(path: ':sample-ui-components')
+    
+    implementation 'com.huawei.agconnect:agconnect-core:1.9.1.300'
     // https://developer.huawei.com/consumer/cn/doc/development/HMSCore-Guides/android-sdk-integrating-sdk-0000001061671869#section52581942164415
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.huawei.agconnect:agconnect-core:1.9.1.300'
     implementation project(path: ':huawei-map-compose')
+
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 }
