--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,11 @@
-buildscript {
-    ext {
-        compose_version = '1.5.0-beta03'
-    }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
-    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
-    id 'com.android.tools.build' version '7.3.0' apply false
-    id 'com.huawei.agconnect' version '1.9.1.300' apply false
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.compose.compiler) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.nexus.publish.plugin)
+    //id 'com.huawei.agconnect' version '1.9.1.300' apply false
 }
 
 apply from: 'gradle/release/map_lib_info.gradle'
@@ -21,8 +17,8 @@ ext {
 group = libraryInfo.groupId
 version = libraryInfo.lib_versionName
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDir
 }
 
 nexusPublishing {
