--- a/gd-map-compose/build.gradle
+++ b/gd-map-compose/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 afterEvaluate {
@@ -8,6 +9,7 @@ afterEvaluate {
 }
 
 android {
+    namespace = "com.melody.map.gd_compose"
     compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
@@ -25,16 +27,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
 
     lint {
@@ -44,11 +45,13 @@ android {
 }
 
 dependencies {
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation platform(libs.compose.bom)
+    implementation "androidx.compose.ui:ui"
+    implementation libs.lifecycle.runtime.ktx
 
     // 高德地图3d
-    api 'com.amap.api:3dmap:10.0.600'
+    api libs.gaode.map3d
     // 高德地图：搜索相关API，路径规划需要用到这里面的类
-    api "com.amap.api:search:9.7.0"
+    api libs.gaode.search
+
 }
