--- a/huawei-map-compose/build.gradle
+++ b/huawei-map-compose/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    alias(libs.plugins.compose.compiler)
 }
 
 afterEvaluate {
@@ -9,6 +10,7 @@ afterEvaluate {
 }
 
 android {
+    namespace = "com.melody.map.petal_compose"
     compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
@@ -26,16 +28,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
 
     lint {
@@ -45,8 +46,9 @@ android {
 }
 
 dependencies {
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation platform('androidx.compose:compose-bom:2024.06.00')
+    implementation "androidx.compose.ui:ui"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
     implementation 'com.huawei.hms:maps-basic:6.11.0.304'
     api 'com.huawei.hms:maps:6.11.0.304'
 }
