--- a/sample-baidu/build.gradle
+++ b/sample-baidu/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 def formattedDate = new Date().format('yyyyMMddHHmm')
@@ -41,23 +42,22 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     buildFeatures {
         compose true
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     packagingOptions {
         resources {
@@ -80,13 +80,14 @@ dependencies {
     implementation project(path: ':sample-ui-components')
     implementation project(path: ':baidu-map-compose')
     // 基础库
-    implementation 'com.baidu.lbsyun:base:7.5.8'
+    implementation libs.baidu.base.libmap
     // 定位组件
-    implementation "com.baidu.lbsyun:BaiduMapSDK_Location:9.4.5"
+    implementation libs.baidu.location.map
     // 检索组件
-    implementation 'com.baidu.lbsyun:BaiduMapSDK_Search:7.5.8'
+    implementation libs.baidu.search.map
     // 工具组件
-    implementation 'com.baidu.lbsyun:BaiduMapSDK_Util:7.5.8'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
+    implementation libs.baidu.util.map
+
+    debugImplementation libs.leakcanary.android
 
 }
