--- a/sample-common/build.gradle
+++ b/sample-common/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 android {
@@ -24,15 +25,14 @@ android {
         compose true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '19'
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.3.2"
-        kotlinCompilerVersion "1.7.10"
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     packagingOptions {
         resources {
@@ -42,11 +42,12 @@ android {
 }
 
 dependencies {
-    api "androidx.compose.runtime:runtime:$compose_version"
-    api 'androidx.core:core-ktx:1.8.0'
-    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    api 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    api 'androidx.activity:activity-compose:1.6.1'
-    api "com.google.accompanist:accompanist-permissions:0.31.5-beta"
-    api "androidx.startup:startup-runtime:1.2.0-alpha02"
+    implementation platform(libs.compose.bom)
+    api "androidx.compose.runtime:runtime"
+    api libs.core.ktx
+    api libs.lifecycle.runtime.ktx
+    api libs.lifecycle.viewmodel.compose
+    api libs.activity.compose
+    api libs.accompanist.permissions
+    api libs.startup.runtime
 }
