--- a/sample-gaode/build.gradle
+++ b/sample-gaode/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 def formattedDate = new Date().format('yyyyMMddHHmm')
@@ -10,6 +11,7 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 def jksDir = keystorePropertiesFile.absolutePath.substring(0,keystorePropertiesFile.absolutePath.length() - "keystore.properties".length())
 
 android {
+    namespace 'com.melody.map.myapplication'
     compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
@@ -46,18 +48,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     buildFeatures {
         compose true
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     packagingOptions {
         resources {
@@ -79,5 +80,5 @@ dependencies {
     implementation project(path: ':sample-common')
     implementation project(path: ':sample-ui-components')
     implementation project(path: ':gd-map-compose')
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
+    debugImplementation libs.leakcanary.android
 }
