--- a/sample-google/build.gradle
+++ b/sample-google/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 def formattedDate = new Date().format('yyyyMMddHHmm')
@@ -41,23 +42,22 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     buildFeatures {
         compose true
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     packagingOptions {
         resources {
@@ -65,8 +65,8 @@ android {
         }
     }
 
-    android.applicationVariants.all { variant ->
-        variant.outputs.all {
+    android.applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
             outputFileName = "google_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
         }
     }
