--- a/sample-tencent/build.gradle
+++ b/sample-tencent/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 def formattedDate = new Date().format('yyyyMMddHHmm')
@@ -42,23 +43,22 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     buildFeatures {
         compose true
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     packagingOptions {
         resources {
@@ -81,7 +81,7 @@ dependencies {
     implementation project(path: ':sample-ui-components')
     implementation project(path: ':tencent-map-compose')
     // 定位SDK
-    implementation 'com.tencent.map.geolocation:TencentLocationSdk-openplatform:7.5.2'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
+    implementation libs.tencent.location.map
+    debugImplementation libs.leakcanary.android
 
 }
