--- a/sample-ui-components/build.gradle
+++ b/sample-ui-components/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.compose.compiler)
 }
 
 android {
@@ -24,15 +25,14 @@ android {
         compose true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '19'
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.3.2"
-        kotlinCompilerVersion "1.7.10"
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     packagingOptions {
         resources {
@@ -42,12 +42,14 @@ android {
 }
 
 dependencies {
-    api 'androidx.core:core-ktx:1.8.0'
-    api "androidx.compose.foundation:foundation:1.3.1"
-    api "androidx.compose.material:material:1.3.1"
-    api "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    api "androidx.compose.ui:ui:$compose_version"
-    api "com.google.accompanist:accompanist-flowlayout:0.26.2-beta"
-    api "com.google.accompanist:accompanist-drawablepainter:0.26.2-beta"
+    implementation platform(libs.compose.bom)
+    api "androidx.compose.ui:ui"
+    api "androidx.compose.ui:ui-tooling-preview"
+    api "androidx.compose.foundation:foundation"
+
+    api libs.core.ktx
+    api libs.material
+    api libs.accompanist.flowlayout
+    api libs.accompanist.drawablepainter
     implementation project(path: ':sample-common')
 }
