--- a/tencent-map-compose/build.gradle
+++ b/tencent-map-compose/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    alias(libs.plugins.compose.compiler)
 }
 
 afterEvaluate {
@@ -9,6 +10,7 @@ afterEvaluate {
 }
 
 android {
+    namespace = "com.melody.map.tencent_compose"
     compileSdk rootProject.ext.libraryInfo.compileSdk
 
     defaultConfig {
@@ -26,18 +28,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    composeOptions  {
-        kotlinCompilerExtensionVersion "1.3.2" 
-        kotlinCompilerVersion "1.7.10"
+    kotlinOptions {
+        jvmTarget = '19'
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.14"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
     }
-    kotlinOptions {
-        jvmTarget = '11'
-    }
-
     lint {
         checkReleaseBuilds false
         abortOnError false
@@ -45,11 +45,12 @@ android {
 }
 
 dependencies {
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation platform(libs.compose.bom)
+    implementation "androidx.compose.ui:ui"
+    implementation libs.lifecycle.runtime.ktx
 
     // 地图库
-    api 'com.tencent.map:tencent-map-vector-sdk:5.1.0'
+    api libs.tencent.map.vector.sdk
     // 地图组件库，包括小车平移、点聚合等组件功能。
-    api 'com.tencent.map:sdk-utilities:1.0.9.1'
+    api libs.tencent.map.sdk.utilities
 }
