--- a/sample-tencent/src/main/AndroidManifest.xml
+++ b/sample-tencent/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <!--腾讯地图 SDK 要求的权限(结束)-->
 
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:allowNativeHeapPointerTagging="false"
